--- a/index.css
+++ b/index.css
@@ -18,3 +18,11 @@
   line-height: 30px;
   width: 93%;
 }
+
+.btnHomePage {
+  border-radius: .25em;
+  border: 1px solid rgba(27,31,35,.2);
+  line-height: 25px;
+  width: 35%;
+  margin-left: 15px;
+}
